--- a/style.css
+++ b/style.css
@@ -287,9 +287,15 @@ ul li span:hover {
 }
 
   button {
-    padding: 10px 15px;
-    font-size: 12px;
-  }
+  border: none;
+  outline: none;
+  padding: 10px 15px;
+  background: #ff5945;
+  color: #fff;
+  font-size: 15px;
+  cursor: pointer;
+  border-radius: 40px;
+}
 
   ul li {
     font-size: 14px;
@@ -325,6 +331,7 @@ ul li span:hover {
   margin-top: 40px;
 
 }
+
 
 
 
