--- a/style.css
+++ b/style.css
@@ -271,6 +271,16 @@ ul li span:hover {
     font-size: 14px;
   }
 
+  .row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #edeef0;
+  border-radius: 30px;
+  padding-left: 20px;
+  margin-bottom: 25px;
+}
+
   .stats-number{
   position: absolute;
   left: 285px;
@@ -278,7 +288,7 @@ ul li span:hover {
 }
 
   input {
-  flex: 1;
+  
   border: none;
   background: transparent;
   padding: 10px;
@@ -331,6 +341,7 @@ ul li span:hover {
   margin-top: 40px;
 
 }
+
 
 
 
